# mnemo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.toml
src/: main.rs
