[package]
name = "mnemo"
version = "0.2.0"
edition = "2024"
description = "Record voice notes, transcribe them with ElevenLabs, and store them in Hindsight"
license = "MIT"
repository = "https://github.com/Toady00/mnemo"
readme = "README.md"
keywords = ["cli", "voice", "transcription", "notes"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
cpal = "0.16.0"
reqwest = { version = "0.12.24", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
toml = "0.9.8"
